--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=ftrs
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://mysql-9ad38b7-pkomakula24-bd0d.a.aivencloud.com:15654/FlightApp
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_Z5wDm5LoEcjXWvAnUfy
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
